# pico_shared

./: .gitmodules  BoardConfigs.cmake  BootPartition.cmake  CHANGELOG.md  CMakeLists.txt  DefaultSS.h  FlashParams.cpp  FlashParams.h  FrensHelpers.cpp  FrensHelpers.h  PicoPlusPsram.cpp  PicoPlusPsram.h  RomLister.cpp  RomLister.h  bld.sh  crc32.cpp  crc32.h  dvi_configs.h  ext_audio.c  ext_audio.h  external_audio.h  ffwrappers.c  ffwrappers.cpp  gamepad.cpp  gamepad.h  hid_app.cpp  menu.cpp  menu.h  menu_settings.h  nespad.cpp  nespad.h  nespad.pio  nespad_shared.cpp  settings.cpp  settings.h  soundrecorder.cpp  tusb_config.h  vumeter.cpp  vumeter.h  wavplayer.cpp  (+3 more)
boards/: pico2b.h  waveshare_rp2350_pizero.h
drivers/audio/pico_audio_i2s/: audio_i2s.c
drivers/audio/pico_audio_i2s/include/pico/: audio_i2s.h
drivers/i2c_bus_recovery/: CMakeLists.txt  i2c_bus_recovery.c  i2c_bus_recovery.h
drivers/pico_audio_i2s/: CMakeLists.txt  audio_i2s.c  audio_i2s.h  audio_i2s_hp.c
drivers/pico_audio_i2s_pe/: CMakeLists.txt  audio_i2s.h  audio_i2s_adapter.c  pe_audio_i2s_wrapper.c
drivers/pico_audio_i2s_pe/pico_extras/: README.md  audio_i2s.c
drivers/pico_audio_mcp4822/: CMakeLists.txt  mcp4822.c  mcp4822.h  myringbuffer.c  myringbuffer.h
drivers/pico_fatfs/: tf_card.c  tf_card.h
drivers/pico_hdmi/: CMakeLists.txt  hstx.c  hstx.h  hstx_data_island_queue.c  hstx_data_island_queue.h  hstx_packet.c  hstx_packet.h  video_output.c  video_output.h
drivers/pico_hdmi_old/: hstx_data_island_queue.c  hstx_data_island_queue.h  hstx_packet.c  hstx_packet.h  hstx_pins.h  video_output.c  video_output.h
drivers/pico_hdmi_old/sample/: main.c
drivers/pico_hstx/: hstx.c  hstx.h
drivers/pico_psram/: CMakeLists.txt  PicoPlusPsram.cpp  PicoPlusPsram.h  SetupPsram.c
drivers/tlv320dac3100/: CMakeLists.txt  tlv320dac3100.c  tlv320dac3100.h
